@@ -1,6 +1,6 @@
 OASISFormat:      0.4
 Name:             sqlite3
-Version:          4.1.0
+Version:          4.1.1
 Synopsis:         sqlite3-ocaml - SQLite3 bindings
 Description:      sqlite3-ocaml is an OCaml library with bindings to the
                   SQLite3 client API.  Sqlite3 is a self-contained, serverless,
@@ -17,7 +17,7 @@ Copyrights:       (C) 2007-2010 Jane Street Holding LLC <opensource@janestreet.c
 Maintainers:      Markus Mottl <markus.mottl@gmail.com>,
                   Christian Szegedy <csdontspam@metamatix.com>
 LicenseFile:      COPYING.txt
-License:          LGPL-2.1+ with OCaml linking exception
+License:          Expat
 OCamlVersion:     >= 3.12
 FindlibVersion:   >= 1.3.1
 Homepage:         http://mmottl.github.io/sqlite3-ocaml
