@@ -1,9 +1,9 @@
 (* setup.ml generated for the first time by OASIS v0.3.0 *)
 
 (* OASIS_START *)
-(* DO NOT EDIT (digest: 4d1117fdef16d5bfd3ab11d080ff8644) *)
+(* DO NOT EDIT (digest: ca0a65af2ec3c9934900a490b3a6e221) *)
 (*
-   Regenerated by OASIS v0.4.7
+   Regenerated by OASIS v0.4.8
    Visit http://oasis.forge.ocamlcore.org for more information and
    documentation about functions used in this file.
 *)
@@ -658,6 +658,7 @@ module OASISContext = struct
       ignore_unknown_fields: bool;
       printf:                level -> string -> unit;
       srcfs:                 source OASISFileSystem.fs;
+      load_oasis_plugin:     string -> bool;
     }
 
 
@@ -682,6 +683,7 @@ module OASISContext = struct
         ignore_unknown_fields = false;
         printf                = printf;
         srcfs                 = new OASISFileSystem.host_fs(Sys.getcwd ());
+        load_oasis_plugin     = (fun _ -> false);
       }
 
 
@@ -3160,7 +3162,7 @@ module OASISFileUtil = struct
 end
 
 
-# 3163 "setup.ml"
+# 3165 "setup.ml"
 module BaseEnvLight = struct
 (* # 22 "src/base/BaseEnvLight.ml" *)
 
@@ -3240,7 +3242,7 @@ module BaseEnvLight = struct
 end
 
 
-# 3243 "setup.ml"
+# 3245 "setup.ml"
 module BaseContext = struct
 (* # 22 "src/base/BaseContext.ml" *)
 
@@ -5663,7 +5665,7 @@ module BaseCompat = struct
 end
 
 
-# 5666 "setup.ml"
+# 5668 "setup.ml"
 module InternalConfigurePlugin = struct
 (* # 22 "src/plugins/internal/InternalConfigurePlugin.ml" *)
 
@@ -6469,7 +6471,7 @@ module InternalInstallPlugin = struct
 end
 
 
-# 6472 "setup.ml"
+# 6474 "setup.ml"
 module OCamlbuildCommon = struct
 (* # 22 "src/plugins/ocamlbuild/OCamlbuildCommon.ml" *)
 
@@ -6842,7 +6844,7 @@ module OCamlbuildDocPlugin = struct
 end
 
 
-# 6845 "setup.ml"
+# 6847 "setup.ml"
 module CustomPlugin = struct
 (* # 22 "src/plugins/custom/CustomPlugin.ml" *)
 
@@ -6974,7 +6976,7 @@ module CustomPlugin = struct
 end
 
 
-# 6977 "setup.ml"
+# 6979 "setup.ml"
 open OASISTypes;;
 
 let setup_t =
@@ -7155,14 +7157,14 @@ let setup_t =
        {
           oasis_version = "0.4";
           ocaml_version = Some (OASISVersion.VGreaterEqual "3.12");
-          version = "4.1.0";
+          version = "4.1.1";
           license =
             OASISLicense.DEP5License
               (OASISLicense.DEP5Unit
                  {
-                    OASISLicense.license = "LGPL";
-                    excption = Some "OCaml linking";
-                    version = OASISLicense.VersionOrLater "2.1"
+                    OASISLicense.license = "Expat";
+                    excption = None;
+                    version = OASISLicense.NoVersion
                  });
           findlib_version = Some (OASISVersion.VGreaterEqual "1.3.1");
           alpha_features = [];
@@ -8525,8 +8527,9 @@ let setup_t =
           plugin_data = []
        };
      oasis_fn = Some "_oasis";
-     oasis_version = "0.4.7";
-     oasis_digest = Some "$K\151\210\005\015\127\216g\1479\155*\233\217a";
+     oasis_version = "0.4.8";
+     oasis_digest =
+       Some "\142\247p7{\134\171\131\149\214\239A\240\181\230\147";
      oasis_exec = None;
      oasis_setup_args = [];
      setup_update = false
@@ -8534,7 +8537,7 @@ let setup_t =
 
 let setup () = BaseSetup.setup setup_t;;
 
-# 8538 "setup.ml"
+# 8541 "setup.ml"
 let setup_t = BaseCompat.Compat_0_4.adapt_setup_t setup_t
 open BaseCompat.Compat_0_4
 (* OASIS_STOP *)
